metalLB/manifests/sample_app/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app1
  namespace: default  
  labels:
    app.kubernetes.io/name: web-app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: web-app1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web-app1
    spec:
      containers:
      - image: nginx
        name: web-app1
        volumeMounts:
        - name: index-html-volume
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
        resources:
          requests:
            memory: "64Mi"
            cpu: "0.5"
          limits:
            memory: "128Mi"
            cpu: "0.5"          
      volumes:
      - name: index-html-volume
        configMap:
          name: index-html-config          
      dnsConfig:
        options:
          - name: ndots
            value: "2"

---
apiVersion: v1
kind: Service
metadata:
  name: web-app1
  namespace: default  
  labels:
    app.kubernetes.io/name: web-app1
spec:
  externalTrafficPolicy: Local #Required for preserving local client IP instead of exposing the Cluster/Node IP to EnvoyProxy
  selector:
    app.kubernetes.io/name: web-app1
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  type: LoadBalancer
# ---

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: web-app2
#   namespace: default  
#   labels:
#     app.kubernetes.io/name: web-app2
#   name: web-app2
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app.kubernetes.io/name: web-app2
#   template:
#     metadata:
#       labels:
#         app.kubernetes.io/name: web-app2
#     spec:
#       containers:
#       - image: nginx
#         name: web-app2
#         command: 
#           - /bin/sh
#           - -c
#           - "echo 'welcome to my web app 2!' > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"
#       dnsConfig:
#         options:
#           - name: ndots
#             value: "2"

# ---

# apiVersion: v1
# kind: Service
# metadata:
#   name: web-app2
#   namespace: default  
#   labels:
#     app.kubernetes.io/name: web-app2
# spec:
#   selector:
#     app.kubernetes.io/name: web-app2
#   ports:
#   - name: http
#     port: 80
#     protocol: TCP
#     targetPort: 80
#   # type: LoadBalancer
